<resources>
    <string name="app_name">Kebanc</string>
    <string name="Siguiente">Siguiente</string>
    <string name="texto_titulo_bebida">¿Qué vas a beber?</string>
    <string name="texto_titulo_datos_personales">Antes de nada, ¿Como te llamas?</string>
    <string name="content_description_coca_cola">Coca-Cola</string>
    <string name="content_description_naranja">Naranja</string>
    <string name="content_description_limon">Limon</string>
    <string name="content_description_cerveza">Cerveza</string>
    <string name="content_description_agua">Agua</string>
    <string name="content_description_eliminar_pedido_bebidas">Eliminar pedido</string>
    <string name="texto_boton_bebidas_atras">Atrás</string>
    <string name="texto_boton_bebidas_siguiente">Siguiente</string>
    <string name="texto_hint_bebidas_lista_pedido">Aquí tus bebidas…</string>
    <string name="texto_titulo_comidas">¿Qué te apetece comer?</string>
    <string name="content_description_comida_doner">Doner</string>
    <string name="content_description_comida_durum">Durum</string>
    <string name="content_description_comida_lahmacun">Lahmacun</string>
    <string name="content_description_comida_shawarma">Shawarma</string>
    <string name="content_description_comida_gyros">Gyros</string>
    <string name="content_description_comida_eliminar_pedido">Eliminar pedido</string>
    <string name="texto_comidas_hint_pedido">Aquí tus kebabs…</string>
    <string name="texto_tipo_carne">Carne:</string>
    <string name="texto_tamano_kebab">Tamaño:</string>
    <string name="texto_comidas_boton_atras">Atrás</string>
    <string name="texto_comidas_boton_siguiente" >Siguiente</string>
    <string name="texto_hint_main_nombre">Nombre</string>
    <string name="texto_main_hint_apellidos">Apellidos</string>
    <string name="texto_main_hint_direccion">Dirección</string>
    <string name="texto_main_hint_telefono">Teléfono</string>
    <string name="texto_main_boton_salir">Salir</string>
    <string name="texto_main_botoon_salir">Salir</string>
    <string name="texto_factura_titulo_factura">Resumen del pedido:</string>
    <string name="texto_factura_datos_cliente">Tus datos:</string>
    <string name="texto_factura_nombre">Nombre:&#160;</string>
    <string name="texto_factura_apellidos_cliente">Apellidos:&#160;</string>
    <string name="texto_factura_telefono_cliente">Teléfono:&#160;</string>
    <string name="texto_factura_direccion_cliente">Dirección:&#160;</string>
    <string name="texto_factura_total_factura">TOTAL:</string>
    <string name="texto_factura_pedido_kebabs">TUS KEBABS:</string>
    <string name="texto_factura_detalle_kebab">Aquí tus kebabs…</string>
    <string name="texto_factura_detalle_precio_kebab">Precio</string>
    <string name="texto_factura_separador"></string>
    <string name="texto_factura_pedido_bebidas">TUS BEBIDAS:</string>
    <string name="texto_factura_detalle_pedido_bebidas">Aquí tus bebidas…</string>
    <string name="texto_factura_detalle_precio_bebidas">Precio</string>
    <string name="boton_factura_volver">Volver</string>
    <string name="boton_factura_realizar_pedido">REALIZAR PEDIDO</string>
</resources>
