<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/texto_titulo_datos_personales" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/lblTituloMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNombreMain"
        android:layout_alignParentStart="true"
        android:hint="@string/texto_hint_main_nombre"
        android:layout_below="@+id/lblTituloMain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtApellidosMain"
        android:hint="@string/texto_main_hint_apellidos"
        android:layout_below="@+id/txtNombreMain"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDireccionMain"
        android:hint="@string/texto_main_hint_direccion"
        android:layout_below="@+id/txtApellidosMain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtApellidosMain"
        android:layout_alignEnd="@+id/txtApellidosMain" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtTelefonoMain"
        android:layout_alignParentStart="true"
        android:hint="@string/texto_main_hint_telefono"
        android:layout_below="@+id/txtDireccionMain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Siguiente"
        android:id="@+id/cmdSiguienteMain"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/salir"
        android:layout_alignRight="@+id/lblTituloMain"
        android:layout_toEndOf="@+id/txtTelefonoMain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_main_botoon_salir"
        android:id="@+id/salir"
        android:onClick="Salir"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/cmdSiguienteMain"
        android:layout_alignStart="@+id/cmdSiguienteMain"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
